--- a/resources/build.properties
+++ b/resources/build.properties
@@ -1,47 +1,39 @@
-# Create libraries for the Processing open source programming language and 
-# environment (http://www.processing.org)
+# Create a Library for the Processing open source programming language and 
+# environment (http://processing.org/)
 #
 # Customize the build properties to make the ant-build-process work for your 
 # environment. How? Please read the comments below.
 #
-# The default properties are set for OSX, for Windows-settings please refer to 
-# comments made under (1) and (2).
+# The default properties are set for OS X. Please refer to comments for Windows
+# settings.
 
 
-
-# (1) 
 # Where is your Processing sketchbook located? 
 # If you are not sure, check the sketchbook location in your Processing 
 # application preferences.
 # ${user.home} points the compiler to your home directory.
 # For windows the default path to your sketchbook would be
-# ${user.home}/My Documents/Processing (make adjustments below).
+# ${user.home}/My Documents/Processing (make adjustments below)
 
-sketchbook.location=${user.home}/Documents/Processing
+#sketchbook.location=${user.home}/My Documents/Processing
+sketchbook.location=${user.home}/Documents/P3
 
 
-
-# (2) 
-# Where are the jar files located that are required for compiling your library 
+# Where are the jar files located that are required for compiling your Library 
 # such as e.g. core.jar?
 # By default the local classpath location points to folder libs inside Eclipse's
 # workspace (by default found in your home directory).
-# For Windows the default path would be ${user.home}/workspace/libs (make 
-# adjustments below).
+# For Windows, the default path would be
+# ${user.home}/Documents/workspace/libs (make adjustments below)
+# For OS X,the following path will direct you into Processing's application
+# package, in case you put Processing inside your Applications folder. 
 
-classpath.local.location=${user.home}/Documents/workspace/ComputationalGeometry/libs
-
-# For OSX users. 
-# The following path will direct you into Processing's application source code 
-# folder in case you put Processing inside your Applications folder. 
-# Uncommenting the line below will overwrite the classpath.local.location from 
-# above.
-
-#classpath.local.location=/Applications/Processing.app/Contents/Resources/Java/core/library/
+#classpath.local.location=/Applications/Processing.app/Contents/Java/core/library
+classpath.local.location=${user.home}/Documents/workspace/libs
 
 
 # Add all jar files that are required for compiling your project to the local 
-# and project classpath, use a comma as delimiter. These jar files must be 
+# and project classpath. Use a comma as delimiter. These jar files must be 
 # inside your classpath.local.location folder.
 
 classpath.local.include=core.jar,quickhull3d.jar
@@ -54,70 +46,66 @@ classpath.local.include=core.jar,quickhull3d.jar
 classpath.libraries.location=${sketchbook.location}/libraries
 
 
+# Set the java version that should be used to compile your Library.
 
-# (3)
-# Set the java version that should be used to compile your library.
-
-java.target.version=1.6
+java.target.version=1.7
 
 
 # Set the description of the Ant build.xml file.
 
-ant.description=ComputationalGeometry build file.
+ant.description=Processing Library Ant build file.
 
 
-
-# (4)
-# Project details.
-# Give your library a name.
+# Give your Library a name. The name must not contain spaces or special 
+# characters.
 
 project.name=ComputationalGeometry
+
+
+# The name as the user will see it. This can contain spaces and special 
+# characters.
+
+project.prettyName=Computational Geometry
 
 
 # Use 'normal' or 'fast' as value for project.compile.
 # 'fast' will only compile the project into your sketchbook.
 # 'normal' will compile the distribution including the javadoc-reference and all
 # web-files (the compile process here takes longer).
+# All files compiled with project.compile=normal are stored in the distribution 
+# folder.
 
 project.compile=normal
 
-# All files compiled with project.compile=normal are stored 
-# in the distribution folder.
 
-
-
-# (5)
-# The following items are properties that will be used to make changes to the 
-# web document templates. Values of properties will be inserted into the 
-# documents automatically.
-# If you need more control, you can edit web/index.html and
-# web/library.properties directly.
+# Set your name and URL, used for the web page and properties file.
 
 author.name=Mark Collins & Toru Hasegawa
-author.url=http://proxyarch.com
+author.url=http://thecloudlab.org
 
 
-# Set the web page for your library.
+# Set the web page for your Library.
 # This is NOT a direct link to where to download it.
 
 library.url=http://thecloudlab.org/processing/library.html
 
 
-# Set the category of your library. This must be one (or many) of the following:
+# Set the category (or categories) of your Library from the following list:
 #   "3D"            "Animation"     "Compilations"      "Data"          
 #   "Fabrication"   "Geometry"      "GUI"               "Hardware"      
 #   "I/O"           "Language"      "Math"              "Simulation"    
-#   "Sound"         "Utilities"     "Typography"        "Video & Vision"  
-# If a value other than those listed is used, your library will listed as 
-# "Other".
+#   "Sound"         "Utilities"     "Typography"        "Video & Vision"
+# 
+# If a value other than those listed is used, your Library will listed as 
+# "Other". Many categories must be comma-separated.
 
-library.category=Geometry
+library.categories=Geometry
 
 
-# A short sentence (or fragment) to summarize the library's function. This will 
-# be shown from inside the PDE when the library is being installed. Avoid 
-# repeating the name of your library here. Also, avoid saying anything redundant 
-# like mentioning that it's a library. This should start with a capitalized 
+# A short sentence (or fragment) to summarize the Library's function. This will 
+# be shown from inside the PDE when the Library is being installed. Avoid 
+# repeating the name of your Library here. Also, avoid saying anything redundant 
+# like mentioning that it's a Library. This should start with a capitalized 
 # letter, and end with a period.
 
 library.sentence=A simple, lightweight library for generating meshes such as isometric surfaces, boundary hulls and skeletons.
@@ -125,43 +113,59 @@ library.sentence=A simple, lightweight library for generating meshes such as iso
 
 # Additional information suitable for the Processing website. The value of
 # 'sentence' always will be prepended, so you should start by writing the
-# second sentence here. If your library only works on certain operating systems,
+# second sentence here. If your Library only works on certain operating systems,
 # mention it here.
 
 library.paragraph= Meshes are generated by specifying points and edges that inform the generation of the target output. In isometric surfacing, the library supports direct manipulation of the underlying grid data as well as simple meta-ball modeling.
 
 
 # Set the source code repository for your project.
-# Recommendations for storing your source code online are Google Code or GitHub.
+# Recommendations for storing your source code online are GitHub or Google Code.
 
 source.host=GitHub
 source.url=https://github.com/cloudlab/ComputationalGeometry-P5
 source.repository=https://github.com/cloudlab/ComputationalGeometry-P5
 
 
-# The current version of your library. 
+# The current version of your Library. 
 # This number must be parsable as an int. It increments once with each release. 
-# This is used to compare different versions of the same library, and check if 
+# This is used to compare different versions of the same Library, and check if 
 # an update is available.
 
-library.version=2
+library.version=3
 
 
-# The version as the user will see it. 
-# If blank, the library.version attribute will be used here.
+# The version as the user will see it.
 
-library.prettyVersion=2
+library.prettyVersion=3.0
 
 
-library.copyright=(C) 2013
+# The min and max revision of Processing compatible with your Library.
+# Note that these fields use the revision and not the version of Processing, 
+# parsable as an int. For example, the revision number for 2.2.1 is 227. 
+# You can find the revision numbers in the change log: https://raw.githubusercontent.com/processing/processing/master/build/shared/revisions.txt
+# Only use maxRevision (or minRevision), when your Library is known to 
+# break in a later (or earlier) release. Otherwise, use the default value 0.
+
+compatible.minRevision=0
+compatible.maxRevision=0
+
+
+# The platforms and Processing version that the Library has been tested
+# against. This information is only used in the generated webpage.
+
+tested.platform=osx,windows
+tested.processingVersion=3.0
+
+
+# Additional information for the generated webpage.
+
+library.copyright=(c) 2015
 library.dependencies=?
 library.keywords=3D, geometry, surface, contour, iso, polygon, poly, generative, skeleton, wrap, hull, boundary, Proxy
-
-tested.platform=osx
-tested.processingVersion=2.0
 
 
 # Include javadoc references into your project's javadocs.
 
-javadoc.java.href=http://java.sun.com/javase/6/docs/api/
-javadoc.processing.href=http://processing.googlecode.com/svn/trunk/processing/build/javadoc/core/
+javadoc.java.href=http://docs.oracle.com/javase/7/docs/api/
+javadoc.processing.href=http://processing.org/reference/javadoc/core/
